Thu Jun  9 09:05:04 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: Ruby classes can be loaded
	  from YAML files.
	* ext/psych/lib/psych/visitors/yaml_tree.rb: Ruby classes can be
	  dumped to YAML files.
	* test/psych/test_class.rb: corresponding test.

Wed Jun  8 21:38:57 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* cont.c (root_fiber_alloc): set root fiber's status RUNNING.
	  in cont_mark() only RUNNING fiber's machine stack is marked.
	  root fiber's status should be RUNNING at the beginning regardless of
	  FIBER_USE_NATIVE. [ruby-core:36735] fixes #4827

Tue Jun  7 20:50:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* doc/irb/irb.rd: fix typo. patch by Nobuhiro IMAI.
	  [Bug #4843] [ruby-dev:43639]
	* doc/irb/irb.rd.ja: ditto.
	* doc/ChangeLog-YARV: ditto.

Tue Jun  7 18:52:55 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/rubygems/user_interaction.rb (Gem::StreamUI#tty?): IO#tty? of
	  Windows has been fixed at r29969.

	* test/rubygems/test_gem_stream_ui.rb: now can run tests.

Tue Jun  7 18:36:41 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/rubygems/test_gem.rb (TestGem#{test_self_user_home_userprofile,
	  test_self_user_home_user_drive_and_path}): should simply ignore
	  meaningless tests instead of skipping them.

Tue Jun  7 18:15:00 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (TestRubyOptions#test_set_program_name):
	  should show some messages when skipping tests.

Tue Jun  7 13:59:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (date_s_today, datetime_s_now): check the
	  result of localtime_r().

Tue Jun  7 13:36:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/extconf.rb: use $defs not $CPPFLAGS to get rid of
	  command line escape issues on Windows.  fixed #4835.

Tue Jun  7 03:18:45 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_io.rb (TestIO#test_s_{,bin}write): do not create a