@@ -57,7 +57,7 @@ module Psych
           Complex(o.value)
         when "!ruby/object:Rational"
           Rational(o.value)
-        when "!ruby/class"
+        when "!ruby/class", "!ruby/module"
           resolve_class o.value
         when "tag:yaml.org,2002:float", "!float"
           Float(@ss.tokenize(o.value))
