@@ -246,6 +246,11 @@ module Psych
         end
       end
 
+      def visit_Module o
+        raise TypeError, "can't dump anonymous module: #{o}" unless o.name
+        @emitter.scalar o.name, nil, '!ruby/module', false, false, Nodes::Scalar::SINGLE_QUOTED
+      end
+
       def visit_Class o
         raise TypeError, "can't dump anonymous class: #{o}" unless o.name
         @emitter.scalar o.name, nil, '!ruby/class', false, false, Nodes::Scalar::SINGLE_QUOTED
